--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
     <header>Talk Bananaaaa</header>
     <hr>
-    <textarea placeholder="Enter Your text in english to tanslate it into Banana language"></textarea><br><br>
+    <textarea id="first" placeholder="Enter Your text in english to tanslate it into Banana language"></textarea><br><br>
     <button>Translate to Banana</button><br><br><br>
-    <textarea></textarea><br>
+    <textarea id="second"></textarea><br>
     <img src="feelinghappy.svg">
     <footer>
         This language is spoken by the minions in Despicable Me. The language is actually lots of languages. Yi kai yai yai bananna! Minion is a registered trademark of Universal Studios.
     </footer>
-    
+    <script src="/app.js"></script>
 </body>
 </html>
